// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches cfn output 1`] = `
Object {
  "Outputs": Object {
    "vpcresourcesfargatesgoutput582976FD": Object {
      "Export": Object {
        "Name": "fargateSecurityGroupOutput",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "vpcresourcesvpcfargatesgEC8BDAC9",
          "GroupId",
        ],
      },
    },
    "vpcresourcesrdssgoutput568572D2": Object {
      "Export": Object {
        "Name": "rdsSecurityGroupOutput",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "vpcresourcesvpcrdssg7F633757",
          "GroupId",
        ],
      },
    },
    "vpcresourcesvpcoutput7B224303": Object {
      "Export": Object {
        "Name": "vpcOutput",
      },
      "Value": Object {
        "Ref": "vpcresourcesvpc04A6628D",
      },
    },
  },
  "Resources": Object {
    "vpcresourcesvpc04A6628D": Object {
      "Properties": Object {
        "CidrBlock": "10.20.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "vpcresourcesvpcIGW3DD8E1B1": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "vpcresourcesvpcVPCGW5C5D88FC": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "vpcresourcesvpcIGW3DD8E1B1",
        },
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "vpcresourcesvpcfargatesgEC8BDAC9": Object {
      "Properties": Object {
        "GroupDescription": "Test/vpc-resources/vpc/fargate-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "vpcresourcesvpc04A6628D",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8080,
            "IpProtocol": "tcp",
            "ToPort": 8080,
          },
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "vpcresourcesvpc04A6628D",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8082,
            "IpProtocol": "tcp",
            "ToPort": 8082,
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "vpcresourcesvpcfargatesgfromTestvpcresourcesvpcfargatesg0054F227ALLTRAFFICF8108D7B": Object {
      "Properties": Object {
        "Description": "Internal Communication",
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesvpcfargatesgEC8BDAC9",
            "GroupId",
          ],
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesvpcfargatesgEC8BDAC9",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "vpcresourcesvpcrdssg7F633757": Object {
      "Properties": Object {
        "GroupDescription": "Test/vpc-resources/vpc/rds-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "vpcresourcesvpcrdssgfromTestvpcresourcesvpcfargatesg0054F2275432951484EE": Object {
      "Properties": Object {
        "Description": "from Testvpcresourcesvpcfargatesg0054F227:5432",
        "FromPort": 5432,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesvpcrdssg7F633757",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "vpcresourcesvpcfargatesgEC8BDAC9",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "vpcresourcesvpcserviceSubnet1DefaultRouteCB7BC393": Object {
      "DependsOn": Array [
        "vpcresourcesvpcVPCGW5C5D88FC",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "vpcresourcesvpcIGW3DD8E1B1",
        },
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet1RouteTable408EFA17",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "vpcresourcesvpcserviceSubnet1RouteTable408EFA17": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc/serviceSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "vpcresourcesvpcserviceSubnet1RouteTableAssociationA4677285": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet1RouteTable408EFA17",
        },
        "SubnetId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet1Subnet25A07FAE",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "vpcresourcesvpcserviceSubnet1Subnet25A07FAE": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.20.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "service",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc/serviceSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "vpcresourcesvpcserviceSubnet2DefaultRoute3AE5F4DA": Object {
      "DependsOn": Array [
        "vpcresourcesvpcVPCGW5C5D88FC",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "vpcresourcesvpcIGW3DD8E1B1",
        },
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet2RouteTable9CE7CD83",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "vpcresourcesvpcserviceSubnet2RouteTable9CE7CD83": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc/serviceSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "vpcresourcesvpcserviceSubnet2RouteTableAssociation4A28DF69": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet2RouteTable9CE7CD83",
        },
        "SubnetId": Object {
          "Ref": "vpcresourcesvpcserviceSubnet2Subnet5F556DC9",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "vpcresourcesvpcserviceSubnet2Subnet5F556DC9": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.20.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "service",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/vpc-resources/vpc/vpc/serviceSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "vpcresourcesvpc04A6628D",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
  },
}
`;

exports[`matches snapshot 1`] = `
Object {
  "Outputs": Object {
    "basefargatesgoutputEC2DAA76": Object {
      "Export": Object {
        "Name": "fargateSecurityGroupOutput",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "basevpcfargatesg23C1E879",
          "GroupId",
        ],
      },
    },
    "baserdssgoutput67D20F68": Object {
      "Export": Object {
        "Name": "rdsSecurityGroupOutput",
      },
      "Value": Object {
        "Fn::GetAtt": Array [
          "basevpcrdssgB45ED685",
          "GroupId",
        ],
      },
    },
    "basevpcoutput4D2E6D16": Object {
      "Export": Object {
        "Name": "vpcOutput",
      },
      "Value": Object {
        "Ref": "basevpcA3F0C9A6",
      },
    },
  },
  "Resources": Object {
    "basevpcA3F0C9A6": Object {
      "Properties": Object {
        "CidrBlock": "10.20.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::VPC",
    },
    "basevpcIGW08407E76": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc",
          },
        ],
      },
      "Type": "AWS::EC2::InternetGateway",
    },
    "basevpcVPCGW451159D1": Object {
      "Properties": Object {
        "InternetGatewayId": Object {
          "Ref": "basevpcIGW08407E76",
        },
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::VPCGatewayAttachment",
    },
    "basevpcfargatesg23C1E879": Object {
      "Properties": Object {
        "GroupDescription": "Test/base/vpc/fargate-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "SecurityGroupIngress": Array [
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "basevpcA3F0C9A6",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8080,
            "IpProtocol": "tcp",
            "ToPort": 8080,
          },
          Object {
            "CidrIp": Object {
              "Fn::GetAtt": Array [
                "basevpcA3F0C9A6",
                "CidrBlock",
              ],
            },
            "Description": "Allow API Calls Internally",
            "FromPort": 8082,
            "IpProtocol": "tcp",
            "ToPort": 8082,
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "basevpcfargatesgfromTestbasevpcfargatesg3E6E5487ALLTRAFFICC1227CB8": Object {
      "Properties": Object {
        "Description": "Internal Communication",
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "basevpcfargatesg23C1E879",
            "GroupId",
          ],
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "basevpcfargatesg23C1E879",
            "GroupId",
          ],
        },
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "basevpcrdssgB45ED685": Object {
      "Properties": Object {
        "GroupDescription": "Test/base/vpc/rds-sg",
        "SecurityGroupEgress": Array [
          Object {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "basevpcrdssgfromTestbasevpcfargatesg3E6E54875432B72E5204": Object {
      "Properties": Object {
        "Description": "from Testbasevpcfargatesg3E6E5487:5432",
        "FromPort": 5432,
        "GroupId": Object {
          "Fn::GetAtt": Array [
            "basevpcrdssgB45ED685",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": Object {
          "Fn::GetAtt": Array [
            "basevpcfargatesg23C1E879",
            "GroupId",
          ],
        },
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "basevpcserviceSubnet1DefaultRouteA933D002": Object {
      "DependsOn": Array [
        "basevpcVPCGW451159D1",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "basevpcIGW08407E76",
        },
        "RouteTableId": Object {
          "Ref": "basevpcserviceSubnet1RouteTable8CBAC46B",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "basevpcserviceSubnet1RouteTable8CBAC46B": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc/serviceSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "basevpcserviceSubnet1RouteTableAssociationEB3F18F4": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "basevpcserviceSubnet1RouteTable8CBAC46B",
        },
        "SubnetId": Object {
          "Ref": "basevpcserviceSubnet1Subnet9BCAEF9A",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "basevpcserviceSubnet1Subnet9BCAEF9A": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1a",
        "CidrBlock": "10.20.0.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "service",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc/serviceSubnet1",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
    "basevpcserviceSubnet2DefaultRoute5D8F81CB": Object {
      "DependsOn": Array [
        "basevpcVPCGW451159D1",
      ],
      "Properties": Object {
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": Object {
          "Ref": "basevpcIGW08407E76",
        },
        "RouteTableId": Object {
          "Ref": "basevpcserviceSubnet2RouteTable05C19E12",
        },
      },
      "Type": "AWS::EC2::Route",
    },
    "basevpcserviceSubnet2RouteTable05C19E12": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc/serviceSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::RouteTable",
    },
    "basevpcserviceSubnet2RouteTableAssociationBC37A99F": Object {
      "Properties": Object {
        "RouteTableId": Object {
          "Ref": "basevpcserviceSubnet2RouteTable05C19E12",
        },
        "SubnetId": Object {
          "Ref": "basevpcserviceSubnet2Subnet0E317131",
        },
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
    },
    "basevpcserviceSubnet2Subnet0E317131": Object {
      "Properties": Object {
        "AvailabilityZone": "dummy1b",
        "CidrBlock": "10.20.1.0/24",
        "MapPublicIpOnLaunch": true,
        "Tags": Array [
          Object {
            "Key": "aws-cdk:subnet-name",
            "Value": "service",
          },
          Object {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public",
          },
          Object {
            "Key": "Name",
            "Value": "Test/base/vpc/vpc/serviceSubnet2",
          },
        ],
        "VpcId": Object {
          "Ref": "basevpcA3F0C9A6",
        },
      },
      "Type": "AWS::EC2::Subnet",
    },
  },
}
`;
